fix: fix dialog z-index

--- a/packages/arvue-ui/src/dialog/dialog-content.css
+++ b/packages/arvue-ui/src/dialog/dialog-content.css
@@ -3,7 +3,7 @@
     top: 50%;
     left: 50%;
     translate: -50% -50%;
-    z-index: 10;
+    z-index: 1060;
     display: grid;
     width: 100%;
     max-width: calc(100% - 2rem);
