--- a/packages/arvue-ui/src/dialog/dialog-overlay.css
+++ b/packages/arvue-ui/src/dialog/dialog-overlay.css
@@ -4,7 +4,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 5;
+    z-index: 1055;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
